--- a/src/theme/stylus/page.styl
+++ b/src/theme/stylus/page.styl
@@ -4,11 +4,16 @@
     box-sizing: border-box
 
     // Animation: slide away
-    transition: margin-left 0.3s
+    transition: margin-left 0.3s ease, transform 0.3s ease
 }
 
 .sidebar-visible .page-wrapper {
-    margin-left: $sidebar-width
+    transform: translateX($sidebar-width)
+
+    @media only screen and (min-width: $sidebar-reflow-width) {
+        transform: none
+        margin-left: $sidebar-width
+    }
 }
 
 .page {
